# proxmox-federation

./: .env  .env.example  .gitignore  AI_COMMAND_CENTER_README.md  CONTRIBUTING.md  DEPLOYMENT-COMPLETE-ORCHESTRATION.md  Dockerfile  OPTIMIZATION_REPORT.md  README.md  TALOS-K8S-DEPLOYMENT-GUIDE.md  WSL_ENVIRONMENT_GUIDE.md  bootstrap-nexus-federation.sh  cleanup_and_optimize.sh  consciousness_zero_command_center.py  consciousness_zero_optimized.py  deploy-vaultwarden.sh  docker-compose.yml  final-status-check.sh  local-consciousness-demo.sh  master-bootstrap-consciousness-federation.sh  proxmox-coreflame-installer.sh  quick-deploy.sh  requirements-cloud.txt  requirements.txt  start_ai_command_center.sh  start_consciousness_zero.sh  start_consciousness_zero_optimized.sh  talos-k8s-deployment.sh  test-local-deployment.yaml
app/: agent_service.py  ai_gateway.py  consciousness_zero_optimized.py  openwebui_integration.py  rag_service.py  simple_consciousness_center.py
archive/: AI-COLLABORATION-DEPLOYMENT-GUIDE.md  CONSCIOUSNESS_ZERO_README.md  DEPLOYMENT-COMPLETE.md  ENTERPRISE-ARCHITECTURE.md  LOCAL-STATUS-COMPLETE.md  README-CLOUD.md  api_backend.py  build_static.py  cloud_app.py  consciousness_zero_command_center.py  deploy-cloud.sh  (+20 more)
docs/technical/infrastructure/: CLOUDFLARE_DEPLOYMENT.md  INFRASTRUCTURE_ORCHESTRATION.md  NETWORK_INTEGRATION_OPTIMIZED.md  NEXUS_ENHANCE.txt  SECURITY_BEST_PRACTICES.md  STATIC_HYPERSCALE_ROADMAP.md  STATIC_IMPLEMENTATION_STRATEGY.md  TRUENAS_NFS_INTEGRATION.md  pyproject.toml  simple_deploy.txt  static-deploy.mjs  wrangler.toml
(+232 files in other folders)
