[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.11",
    "asyncio>=3.4.3",
    "cryptography>=45.0.4",
    "psutil>=7.0.0",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "twscrape>=0.17.0",
    "websockets>=15.0.1",
]
